--- a/home.html
+++ b/home.html
@@ -14,19 +14,39 @@
         <script src="./js/main.js"></script>        
     </head>
     <body>
+        <div class="alert alert-success d-none" id="my_alert">
+            <strong>Success!</strong> Indicates a successful or positive action.
+          </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-3 border-me">
-                    TEST 1 Perla
+                <div class="col-6"></div>
+                <div class="col-6 text-right">
+                    <a href="home.html">Home</a>
+                    <a href="contact-us.html">Contact Us</a>
                 </div>
-                <div class="col-md-2 border-me text-center">
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    TEST 1
+                </div>
+                <div class="col-md-2 text-center">
                     TEST 2
                 </div>
-                <div class="col-md-3 border-me">
+                <div class="col-md-3">
                     TEST 3
                 </div>
-                <div class="col-md-4 border-me">
+                <div class="col-md-4">
                     TEST 4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <button id="test-btn" class="btn btn-success" onclick="showAlert()">Test Button</button>
+                </div>
+                <div class="col-md-8 text-center">
+                    TEST 2
                 </div>
             </div>
         </div>
