--- a/contact-us.html
+++ b/contact-us.html
@@ -27,7 +27,9 @@
     <body>
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <img class="navbar-brand navbar-text" src="images/logo.png" width="72px" height="auto">
+                <a href="home.html">
+                    <img class="navbar-brand navbar-text" src="images/logo.png" width="72px" height="auto">
+                </a>
                 <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,7 +42,7 @@
             </div>
         </nav>
 
-        <div class="container section">
+        <div class="container">
             <div class="row">
                 <div class="col-6">
                     <h2>Drop us a line or two.</h2>
